11/04/2020:
- changed table 'vendors_services' to 'services'
- added 'is_customer_view_enabled' column as 'boolean' to 'vendors' table


18/04/2020:
- added 'private_stripe_customer_id' to 'vendors'