@@ -41,39 +41,57 @@ router.post('/vendor/services/create', async function (req, res, next) {
 
     if (is_authenticated) {
 
-        let insert_data = {
+        // check package shall allow
+        let shall_allow = await global_vars.packages_mod.check_package_limit({
+            package_id: vu.vendor.package_id,
             vendor_id: vu.vendor.id,
-            name: req.body.name,
-            is_restricted: req.body.is_restricted
-        };
-
-
-        let record_id = 0;
-        await global_vars.knex('services').insert(insert_data).then((result) => {
-
-            success = true;
-
-            record_id = result[0];
-
-        }).catch((err) => {
-            go_ahead = false;
+            table_name: 'services',
+            package_field: 'services'
         });
 
+        if (!shall_allow.shall_allow) {
+            return_data['errors'] = ['package_limitation'];
+            return_data['package_limitation'] = shall_allow;
 
-        if (success) {
-            let log_params = {
-                table_name: 'services',
-                row_id: record_id,
-                vu_id: vu.id,
-                new_value: insert_data,
-                type: 'create'
+            go_ahead = false;
+            success = false;
+        }
+
+        if (go_ahead) {
+            let insert_data = {
+                vendor_id: vu.vendor.id,
+                name: req.body.name,
+                is_restricted: req.body.is_restricted
             };
 
 
-            log_mod.log(log_params);
-        }
+            let record_id = 0;
+            await global_vars.knex('services').insert(insert_data).then((result) => {
 
-        return_data['service'] = await format_mod.get_service(record_id);
+                success = true;
+
+                record_id = result[0];
+
+            }).catch((err) => {
+                go_ahead = false;
+            });
+
+
+            if (success) {
+                let log_params = {
+                    table_name: 'services',
+                    row_id: record_id,
+                    vu_id: vu.id,
+                    new_value: insert_data,
+                    type: 'create'
+                };
+
+
+                log_mod.log(log_params);
+            }
+
+            return_data['service'] = await format_mod.get_service(record_id);
+        }
 
     } else {
 
@@ -245,6 +263,17 @@ router.post('/vendor/services/list', async function (req, res, next) {
 
         return_data['list'] = list;
         return_data['pagination'] = raw_records.pagination;
+
+        // check package shall allow
+        let shall_allow = await global_vars.packages_mod.check_package_limit({
+            package_id: vu.vendor.package_id,
+            vendor_id: vu.vendor.id,
+            table_name: 'services',
+            package_field: 'services'
+        });
+
+        return_data['package_limitation'] = shall_allow;
+
 
     } else {
         return_data['errors'] = ['unauthorized_action'];
